GNOME Bugzilla – Bug 143577
Print Grid lines does not work for Print/Print Print Preview
Last modified: 2004-12-22 21:47:04 UTC
Print Grid lines does not work for Print/Print Print Preview in Gnumeric versions higher than 1.2.8 (it works in 1.2.8) but not in 1.2.9/1.2.10 nor in 1.2.12
Well, in print-cell.c: GnmBorder const *none = hide_grid ? NULL : style_border_none (); So with a hidden grid we use "NULL" otherwise no border. In style_border_set_pc in style-border.c they both cause a return value of FALSE, so no border is printed either way!
Ahh I see the problem. I must have broken it when I adding diagonal border printing. I'll patch in both trees.